create admin base structure
