# public/api/v1/docs/swagger.json
@@ -14,6 +14,28 @@
         }
     ],
     "paths": {
+        "/api/v1/admin/create": {
+            "post": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Create an Admin account",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/App\\Http\\Requests\\Api\\V1\\Admin\\CreateRequest"
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK."
+                    },
+                    "422": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/api/v1/admin/login": {
             "post": {
                 "tags": [
@@ -57,6 +79,69 @@
     },
     "components": {
         "requestBodies": {
+            "App\\Http\\Requests\\Api\\V1\\Admin\\CreateRequest": {
+                "content": {
+                    "application/x-www-form-urlencoded": {
+                        "schema": {
+                            "required": [
+                                "first_name",
+                                "last_name",
+                                "email",
+                                "password",
+                                "password_confirmation",
+                                "address",
+                                "phone_number",
+                                "marketing"
+                            ],
+                            "properties": {
+                                "first_name": {
+                                    "description": "First name",
+                                    "type": "string",
+                                    "default": "Say my name"
+                                },
+                                "last_name": {
+                                    "title": "Last name",
+                                    "description": "Last name",
+                                    "type": "string",
+                                    "default": "No"
+                                },
+                                "email": {
+                                    "description": "Email",
+                                    "type": "string",
+                                    "default": "hi@buckhill.co.uk"
+                                },
+                                "password": {
+                                    "description": "Password",
+                                    "type": "password",
+                                    "default": "admin"
+                                },
+                                "password_confirmation": {
+                                    "description": "Confirm your password",
+                                    "type": "password",
+                                    "default": "admin"
+                                },
+                                "address": {
+                                    "description": "Address",
+                                    "type": "string",
+                                    "default": "admin"
+                                },
+                                "phone_number": {
+                                    "description": "Phone number",
+                                    "type": "string",
+                                    "default": "+55 21 9999-92899"
+                                },
+                                "marketing": {
+                                    "description": "Sign newsletter",
+                                    "type": "0|1",
+                                    "default": "0",
+                                    "nullable": true
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "App\\Http\\Requests\\Api\\V1\\Admin\\LoginRequest": {
                 "content": {
                     "application/x-www-form-urlencoded": {
